# project-rust

./: Cargo.toml  Dockefile  README.md  catalog-info.yaml  mkdocs.yml
.backstage/: techdocs.yaml
docs/: api.md  architecture.md  development.md  index.md  operations.md
docs/getting-started/: installation.md
src/: main.rs
