[package]
name = "project-rust"
version = "0.1.0"
edition = "2021"
authors = ["Anubhav Gain <anubhavg@infopercept.com>"]
description = "A Rust-based microservice component"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
tokio-test = "0.4"